# habit_tracker

./: .gitignore  README.md  pyproject.toml
app/: config.py  dependencies.py  main.py
app/database/: database.py
app/models/: models.py
app/routers/: habit_records.py  habits.py  users.py
app/schemas/: habit_records.py  habits.py  users.py
app/services/: habit_records.py  habits.py  users.py
app/static/: app.js  index.html  styles.css
