[project]
name = "habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "ipython>=9.15.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "sqlalchemy>=2.0.51",
    "typing>=3.10.0.0",
]
